--- a/styles-extra.css
+++ b/styles-extra.css
@@ -202,11 +202,14 @@ body.dark #ptolcard_switch {
   .narrowbodywrapper #logo2 {
     margin-left: calc(100px + 1rem);
   }
-    .leftbar {
+  .leftbar {
     padding-top: 100px;
     width: 100px;
     left: 0.5rem;
     background: transparent;
+    @supports (left:env(safe-area-inset-left)) {
+      left: calc(env(safe-area-inset-left + 0.5rem));
+    }
   }
   .propofol {
     background: transparent;
@@ -308,6 +311,11 @@ body.dark #ptolcard_switch {
 
   .ptolcontainer {
     height: 120px;
+  }
+  /*target parallax2 again*/
+  .narrowbodywrapper #parallax2 {
+    width: calc(100% - 100px - 0.5rem);
+    width: calc(100% - 100px - 0.5rem - env(safe-area-inset-left) - env(safe-area-inset-right));
   }
 
 }
