--- a/styles-extra.css
+++ b/styles-extra.css
@@ -206,7 +206,7 @@ body.dark #ptolcard_switch {
     padding-top: 100px;
     width: 100px;
     left: 0.5rem;
-    left: calc(env(safe-area-inset-left) + 0.5rem);
+    left: 300px;
     background: transparent;
   }
   .propofol {
