--- a/styles.css
+++ b/styles.css
@@ -4645,7 +4645,7 @@ body.dark #cornerblock2:after {
   .prompts_card {
     margin-top:0.5rem;
     width:calc(768px - 320px - 1.5rem);
-    width:calc(768px - 320px - 1.5rem - env(safe-area-inset-left));
+    width:calc(768px - 320px - 1.5rem - env(safe-area-inset-left) - env(safe-area-inset-right));
   }
   .darkmodebutton {
     opacity: 0;
@@ -5136,9 +5136,7 @@ body.dark #chart2wrapper {
     top:80px;
     z-index:10;
     left:calc((100% - 768px)/2 + 320px);
-    left:calc((100% - 768px)/2 + 320px - env(safe-area-inset-right) + env(safe-area-inset-left));
     width:calc(768px - 320px - 0.5rem);
-    width:calc(768px - 320px - 0.5rem - env(safe-area-inset-left));
     padding-right:0.5rem;
     padding-left:0.5rem;
     padding-top:0.5rem;
@@ -5309,6 +5307,25 @@ body.dark #pastschemeCOPY {
   }
   #parallax2 {
     background:transparent;
+  }
+  #bodywrapper {
+    width: calc(768px - env(safe-area-inset-left) - env(safe-area-inset-right));
+  }
+  #prompts_container {
+    left:calc((100% - 768px)/2 + 320px - env(safe-area-inset-right) + env(safe-area-inset-left));
+    width:calc(768px - 320px - 0.5rem - env(safe-area-inset-left) - env(safe-area-inset-right));
+  }
+  .prompts_card {
+    width:calc(768px - 320px - 1.5rem - env(safe-area-inset-left) - env(safe-area-inset-right));
+  }
+  .hamburger {
+    right:calc((100% - 768px) / 2 + env(safe-area-inset-left) + env(safe-area-inset-right));
+  }
+  body.dark .hamburger {
+    right:calc((100% - 768px) / 2 + env(safe-area-inset-left) + env(safe-area-inset-right));
+  }
+  #parallax1container {
+    max-width:320px;
   }
 }
 @media (max-width: 767px) {
