--- a/styles.css
+++ b/styles.css
@@ -511,6 +511,17 @@ input[type=number]:not(:placeholder-shown):focus:valid {
   margin-bottom: 4px;
   cursor: pointer;
 }
+#custom_propdilution {
+  display: none;
+  font-size: 90%;
+  background: rgb(213,237,214);
+  font-weight: bold;
+  border-radius: 1rem;
+  padding: 0 5px;
+  line-height: 24px;
+  margin-bottom: 4px;
+  cursor: pointer;
+}
 
 #custom_opioiddilution {
   display: none;
@@ -1004,7 +1015,11 @@ body.dark #modalInitial, body.dark #modalLoad {
   height:2.7rem;
 }
 .table-Init.paedimode tr {
-  height:2.7rem;
+  height:2.6rem;
+}
+.table-Init.paedimode td {
+  padding-top:2px;
+  padding-bottom:2px;
 }
 
 .IB_elements {
@@ -4717,7 +4732,7 @@ body.dark #cornerblock2:after {
   border-bottom:1px solid #666;
 }
 
-@media (max-height:660px) {
+@media (max-height:700px) {
   #logo {display:none}
 }
 
@@ -4753,7 +4768,7 @@ body.dark #cornerblock2:after {
 }
 
 
-@media (max-height: 620px) {
+@media (max-height: 660px) {
   #rescuebuttons {
     opacity: 0;
     pointer-events: none;
