--- a/styles.css
+++ b/styles.css
@@ -3245,7 +3245,7 @@ body.dark .modal-body a.button_paedimode:hover {
   padding-left:2px;
 
   box-shadow: 0 0 0 0 rgba(76, 175, 80, 1);
-  transform: scale(1);
+  /*transform: scale(1);*/
   animation: pulse 8s infinite;
 }
 
@@ -3267,14 +3267,16 @@ body.dark .modal-body a.button_paedimode:hover {
     box-shadow: 0 0 0 0 rgba(76, 175, 80, 0.7);
   }
 
+  /*
   70% {
-    /*transform: scale(1);*/
+    transform: scale(1);
     box-shadow: 0 0 0 20px rgba(76, 175, 80, 0);
   }
+  */
 
   100% {
     /*transform: scale(0.95);*/
-    box-shadow: 0 0 0 0 rgba(76, 175, 80, 0);
+    box-shadow: 0 0 0 20px rgba(76, 175, 80, 0);
   }
 }
 
