--- a/styles.css
+++ b/styles.css
@@ -3244,7 +3244,7 @@ body.dark .modal-body a.button_paedimode:hover {
   padding-top:10px;
   padding-left:2px;
 
-  box-shadow: 0 0 0 0 rgba(76, 175, 80, 1);
+  box-shadow: 0 0 0 20px rgba(76, 175, 80, 1);
   /*transform: scale(1);*/
   animation: pulse 8s infinite;
 }
