--- a/styles.css
+++ b/styles.css
@@ -4653,7 +4653,8 @@ body.dark #preview-expand-box > div > div.timespan {
   position:fixed;
   top:0;
   right:0;
-  font-size:0.5rem;
+  font-size:7px;
+  line-height:8px;
   font-weight:bold;
   z-index:999;
   color:white;
